// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Config Builder should build on empty project 1`] = `
Object {
  "devServerConfig": Object {},
  "enabledThemes": Array [],
  "experiments": Object {
    "webpack": Object {
      "cssModules": false,
      "hmr": false,
    },
  },
  "hooks": Object {
    "configure": SyncHook {
      "_args": Array [
        "project",
      ],
      "_call": [Function],
      "_callAsync": [Function],
      "_promise": [Function],
      "_x": Array [],
      "call": [Function],
      "callAsync": [Function],
      "compile": [Function],
      "constructor": [Function],
      "interceptors": Array [],
      "name": undefined,
      "promise": [Function],
      "tap": [Function],
      "tapAsync": [Function],
      "tapPromise": [Function],
      "taps": Array [],
    },
    "gulp": Object {
      "babelConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "babelTypeScriptConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "eslintConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "pngSpriteConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "svgSpriteConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
    },
    "webpack": Object {
      "config": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "entryGlobs": SyncHook {
        "_args": Array [
          "globs",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
    },
  },
  "modules": Array [],
  "proxyUrl": "",
  "root": Any<String>,
  "themes": Array [],
  "webpackDevelopmentMode": false,
}
`;

exports[`Project Config Builder should build themes 1`] = `
Object {
  "devServerConfig": Object {},
  "enabledThemes": Array [
    Theme {
      "data": Object {
        "area": "frontend",
        "locales": undefined,
        "path": "Magento/blank",
        "stylesheets": undefined,
      },
      "enabled": true,
      "parent": undefined,
      "sourceDirectory": "vendor/magento/theme-frontend-blank",
    },
    Theme {
      "data": Object {
        "area": "frontend",
        "locales": undefined,
        "path": "Magento/luma",
        "stylesheets": undefined,
      },
      "enabled": true,
      "parent": Theme {
        "data": Object {
          "area": "frontend",
          "locales": undefined,
          "path": "Magento/blank",
          "stylesheets": undefined,
        },
        "enabled": true,
        "parent": undefined,
        "sourceDirectory": "vendor/magento/theme-frontend-blank",
      },
      "sourceDirectory": "vendor/magento/theme-frontend-luma",
    },
  ],
  "experiments": Object {
    "webpack": Object {
      "cssModules": false,
      "hmr": false,
    },
  },
  "hooks": Object {
    "configure": SyncHook {
      "_args": Array [
        "project",
      ],
      "_call": [Function],
      "_callAsync": [Function],
      "_promise": [Function],
      "_x": Array [],
      "call": [Function],
      "callAsync": [Function],
      "compile": [Function],
      "constructor": [Function],
      "interceptors": Array [],
      "name": undefined,
      "promise": [Function],
      "tap": [Function],
      "tapAsync": [Function],
      "tapPromise": [Function],
      "taps": Array [],
    },
    "gulp": Object {
      "babelConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "babelTypeScriptConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "eslintConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "pngSpriteConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "svgSpriteConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
    },
    "webpack": Object {
      "config": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "entryGlobs": SyncHook {
        "_args": Array [
          "globs",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
    },
  },
  "modules": Array [],
  "proxyUrl": "",
  "root": Any<String>,
  "themes": Array [
    Theme {
      "data": Object {
        "area": "frontend",
        "locales": undefined,
        "path": "Magento/blank",
        "stylesheets": undefined,
      },
      "enabled": true,
      "parent": undefined,
      "sourceDirectory": "vendor/magento/theme-frontend-blank",
    },
    Theme {
      "data": Object {
        "area": "frontend",
        "locales": undefined,
        "path": "Magento/luma",
        "stylesheets": undefined,
      },
      "enabled": true,
      "parent": Theme {
        "data": Object {
          "area": "frontend",
          "locales": undefined,
          "path": "Magento/blank",
          "stylesheets": undefined,
        },
        "enabled": true,
        "parent": undefined,
        "sourceDirectory": "vendor/magento/theme-frontend-blank",
      },
      "sourceDirectory": "vendor/magento/theme-frontend-luma",
    },
  ],
  "webpackDevelopmentMode": false,
}
`;

exports[`Project Config Builder should load user provided config file 1`] = `
Object {
  "devServerConfig": Object {},
  "enabledThemes": Array [],
  "experiments": Object {
    "webpack": Object {
      "cssModules": false,
      "hmr": false,
    },
  },
  "hooks": Object {
    "configure": SyncHook {
      "_args": Array [
        "project",
      ],
      "_call": [Function],
      "_callAsync": [Function],
      "_promise": [Function],
      "_x": Array [],
      "call": [Function],
      "callAsync": [Function],
      "compile": [Function],
      "constructor": [Function],
      "interceptors": Array [],
      "name": undefined,
      "promise": [Function],
      "tap": [Function],
      "tapAsync": [Function],
      "tapPromise": [Function],
      "taps": Array [],
    },
    "gulp": Object {
      "babelConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "babelTypeScriptConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "eslintConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "pngSpriteConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "svgSpriteConfig": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
    },
    "webpack": Object {
      "config": SyncHook {
        "_args": Array [
          "config",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
      "entryGlobs": SyncHook {
        "_args": Array [
          "globs",
        ],
        "_call": [Function],
        "_callAsync": [Function],
        "_promise": [Function],
        "_x": undefined,
        "call": [Function],
        "callAsync": [Function],
        "compile": [Function],
        "constructor": [Function],
        "interceptors": Array [],
        "name": undefined,
        "promise": [Function],
        "tap": [Function],
        "tapAsync": [Function],
        "tapPromise": [Function],
        "taps": Array [],
      },
    },
  },
  "modules": Array [],
  "proxyUrl": "",
  "root": Any<String>,
  "someUserProvidedValue": 5,
  "themes": Array [],
  "webpackDevelopmentMode": false,
}
`;
